[gd_scene load_steps=7 format=3 uid="uid://eat3wswrrsax"]

[ext_resource type="PackedScene" uid="uid://dl3q3v11t355m" path="res://assets/models/flashlight.blend" id="1_0pdal"]
[ext_resource type="Script" path="res://modules/flashlight/flashlight.gd" id="1_64ese"]
[ext_resource type="AudioStream" uid="uid://dp8k00f68xtij" path="res://assets/sfx/flashlight_click.wav" id="3_eypyn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_myeim"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5xkn0"]
bg_color = Color(0.6, 1, 0.6, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_85rw6"]
points = PackedVector3Array(-0.000195742, 0.548919, -1, -0.000195742, 0.883645, -1, 0.194988, 0.548919, -0.980814, -0.000195742, -0.715775, -0.813626, -0.195184, 0.548919, -0.980814, -0.195184, 0.883645, -0.980814, 0.194988, 0.883645, -0.980814, 0.382537, 0.548919, -0.924041, 0.311276, -0.715775, -0.751762, 0.158575, -0.715775, -0.797964, -0.158771, -0.715775, -0.797964, -0.311472, -0.715775, -0.751762, -0.382733, 0.548919, -0.924041, -0.382733, 0.883645, -0.924041, 0.382537, 0.883645, -0.924041, 0.555403, 0.548919, -0.831637, 0.45184, -0.715775, -0.676586, -0.452036, -0.715775, -0.676586, -0.555599, 0.548919, -0.831637, -0.555599, 0.883645, -0.831637, 0.555403, 0.883645, -0.831637, 0.70693, 0.548919, -0.707126, 0.575176, -0.715775, -0.575372, -0.575372, -0.715775, -0.575372, -0.707126, 0.548919, -0.707126, -0.707126, 0.883645, -0.707126, 0.70693, 0.883645, -0.707126, 0.831441, 0.548919, -0.555599, 0.67639, -0.715775, -0.452036, -0.676586, -0.715775, -0.452036, -0.831637, 0.548919, -0.555599, -0.831637, 0.883645, -0.555599, 0.831441, 0.883645, -0.555599, 0.923845, 0.548919, -0.382733, 0.751566, -0.715775, -0.311472, -0.751762, -0.715775, -0.311472, -0.924041, 0.548919, -0.382733, -0.924041, 0.883645, -0.382733, 0.923845, 0.883645, -0.382733, 0.980619, 0.548919, -0.195184, 0.797768, -0.715775, -0.158771, -0.797964, -0.715775, -0.158771, -0.980814, 0.548919, -0.195184, -0.980814, 0.883645, -0.195184, 0.980619, 0.883645, -0.195184, 1, 0.548919, -0.000195742, 0.81343, -0.715775, -0.000195742, -0.813626, -0.715775, -0.000195742, -1, 0.548919, -0.000195742, -1, 0.883645, -0.000195742, 1, 0.883645, -0.000195742, 0.980619, 0.548919, 0.194988, 0.797768, -0.715775, 0.158575, -0.980814, 0.548919, 0.194988, -0.797964, -0.715775, 0.158575, -0.980814, 0.883645, 0.194988, 0.980619, 0.883645, 0.194988, 0.923845, 0.548919, 0.382537, 0.751566, -0.715775, 0.311276, -0.751762, -0.715775, 0.311276, -0.924041, 0.548919, 0.382537, -0.924041, 0.883645, 0.382537, 0.923845, 0.883645, 0.382537, 0.831441, 0.548919, 0.555403, 0.67639, -0.715775, 0.45184, -0.676586, -0.715775, 0.45184, -0.831637, 0.548919, 0.555403, -0.831637, 0.883645, 0.555403, 0.831441, 0.883645, 0.555403, 0.70693, 0.548919, 0.70693, 0.575176, -0.715775, 0.575176, -0.575372, -0.715775, 0.575176, -0.707126, 0.548919, 0.70693, -0.707126, 0.883645, 0.70693, 0.70693, 0.883645, 0.70693, 0.555403, 0.548919, 0.831441, 0.45184, -0.715775, 0.67639, -0.452036, -0.715775, 0.67639, -0.555599, 0.548919, 0.831441, -0.555599, 0.883645, 0.831441, 0.555403, 0.883645, 0.831441, 0.382537, 0.548919, 0.923845, 0.311276, -0.715775, 0.751566, -0.311472, -0.715775, 0.751566, -0.382733, 0.548919, 0.923845, -0.382733, 0.883645, 0.923845, 0.382537, 0.883645, 0.923845, 0.194988, 0.548919, 0.980619, 0.158575, -0.715775, 0.797768, -0.158771, -0.715775, 0.797768, -0.195184, 0.548919, 0.980619, -0.195184, 0.883645, 0.980619, 0.194988, 0.883645, 0.980619, -0.000195742, 0.548919, 1, -0.000195742, -0.715775, 0.81343, -0.000195742, 0.883645, 1)

[node name="Flashlight" type="RigidBody3D" groups=["flashlights"]]
script = ExtResource("1_64ese")

[node name="flashlight" parent="." instance=ExtResource("1_0pdal")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)

[node name="Light" type="SpotLight3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.396437, 0)
visible = false
light_color = Color(0.913725, 0.905882, 0.784314, 1)
light_energy = 6.0
light_volumetric_fog_energy = 0.1
spot_range = 100.0
spot_angle = 30.0

[node name="BatteryLife" type="ProgressBar" parent="."]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -12.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_myeim")
theme_override_styles/fill = SubResource("StyleBoxFlat_5xkn0")
value = 100.0
show_percentage = false

[node name="FlashlightBatteryDrainTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
autostart = true

[node name="FlashlightClickAudio" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_eypyn")
volume_db = 12.0
bus = &"SFX"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.476782, 0, 0, 0, 0.1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_85rw6")

[connection signal="timeout" from="FlashlightBatteryDrainTimer" to="." method="_on_flashlight_battery_drain_timer_timeout"]

[editable path="flashlight"]
